# seekr

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
bench/: benchmark.sh
src/: main.rs
src/cache/: mod.rs
src/chunker/: languages.rs  mod.rs
src/cli/: mod.rs
src/embedder/: mod.rs
src/indexer/: mod.rs  schema.rs
src/output/: mod.rs
src/ranker/: mod.rs
src/semantic/: mod.rs
src/vector_store/: mod.rs
src/watcher/: mod.rs
