[package]
name = "seekr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Ultra-fast local hybrid semantic code search"
authors = ["Robert Bercaru"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bercarurobert/seekr"
keywords = ["search", "code", "semantic", "bm25", "embeddings"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
# Search & Indexing
tantivy = "0.22"

# CLI & Output
clap = { version = "4", features = ["derive", "color"] }
syntect = "5"
colored = "2"

# File system
walkdir = "2"
ignore = "0.4"
notify = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Directories
dirs = "5"

# Async runtime (for watcher)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tree-sitter for semantic chunking (Phase 2)
# tree-sitter = "0.22"
# tree-sitter-rust = "0.21"
# tree-sitter-python = "0.21"
# tree-sitter-typescript = "0.21"
# tree-sitter-go = "0.21"
# tree-sitter-javascript = "0.21"

# Embeddings (Phase 2)
# fastembed = "4"

# Vector store (Phase 2)
# usearch = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "seekr"
path = "src/main.rs"
